--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-OPEN_AI_API="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"
+OPEN_AI_API="your api key"
 
-DATABASE_URL="postgresql://postgres:admin@localhost:5433/postgres"
+DATABASE_URL="postgresql://username:password@localhost:5433/postgres"
